# gnome-paint

./: Makefile.am  configure.ac  meson.build  org.gnome.GnomePaint.json
data/: gp-colorselectorbox.ui  gp-drawingarea.ui  gp-headerbar.ui  gp-imageeditor.ui  gp-shortcuts.ui  gp-toolbox.ui  gp-window.ui  menus.ui  org.gnome.Paint.gresource.xml
po/: meson.build
src/: Makefile.am  gp-application.c  gp-application.h  gp-basetool.c  gp-basetool.h  gp-cairoutils.c  gp-cairoutils.h  gp-colorbutton.c  gp-colorbutton.h  gp-colormanager.c  gp-colormanager.h  gp-colorselectorbox.c  gp-colorselectorbox.h  gp-dialogutils.c  gp-dialogutils.h  gp-document.c  gp-document.h  gp-documentinfo.c  gp-documentinfo.h  gp-documentmanager.c  gp-documentmanager.h  gp-drawhistoryitem.c  gp-drawhistoryitem.h  gp-drawingarea.c  gp-drawingarea.h  gp-fillshapeproperty.c  gp-fillshapeproperty.h  gp-headerbar.c  gp-headerbar.h  gp-help-commands.c  gp-help-commands.h  gp-history.c  gp-history.h  gp-historyitem.c  gp-historyitem.h  gp-imageeditor.c  gp-imageeditor.h  gp-iselectiontool.c  gp-iselectiontool.h  gp-linetool.c  (+42 more)
